# CLICK-A-RPi

./: .gitignore  README.md  alignment.py  click.py  controller.py  dac.py  fpgadriver.py  root@18.18.33.37  svc
IPC-demo/: README.md  chat.py  click-demo.py
IPC-demo/cpp-process/: CMakeLists.txt  main.cpp
bus/: Makefile  README.md  bus.c  bus.py  businterface.c  businterface.py  crc.c  crc.h  depacketizer.py  echo.py  loadbalancer_client.py  packetizer.py  simulator.c  time.py  timeset.py
camera/: README.md  bmp2jpg.py  bmp2png.py
camera/ipc/: CMakeLists.txt  Makefile  README.md  main.cpp  zmq_test
commandhandler/: bist.py  commandhandler.py  filehandling.py  loadbalancer_worker.py  router.py  test_file.txt
fpga/: BIST_5.xsvf  README.md  alignment.py  dac.py  dac_spi.py  edfa.py  encoded_poem_zone.txt  encoder.py  fdir.py  flash.py  fpga-ipc.py  fpga.py  fpga_bus.py  fpgadriver.py  fsm.py  interleaver.py  node.py  optimizer.py  package_data_functions.py  protected_output_3.xsvf  protected_output_3_stall.xsvf  protected_output_3_stall_inverted.xsvf  run-fpga-ipc.py  spi.py  unbind.sh
housekeeping/: housekeeping.py  psutil_test.py
lib/: calibParams.csv  errors.py  file_manager.py  fpga_map.h  fpga_map.py  ipc_helper.py  ipc_loadbalancer.py  ipc_packets.h  ipc_packets.py  offsetParams.csv  options.py  options.txt  trackParams.csv  tx_packet.py  zmqTxRx.py
pat/: .gitignore  Makefile  README.md  calibration.cpp  calibration.h  camera.cpp  fsm.cpp  fsm.h  log.cpp  log.h  main.cpp  packetdef.cpp  packetdef.h  processing.cpp  processing.h  tracking.cpp  (+1 more)
(+159 files in other folders)
